--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,25 @@ h1 {
   height: 400px;
 }
 
+.maskedPoem {
+  overflow-y: scroll;
+  height: 70vh;
+}
+
+.maskedPoem.completed {
+  color: green;
+}
+
+.poemTitle h2 {
+  margin-bottom: 0.2em;
+  margin-top: 0em;
+}
+.poemTitle p {
+  font-style: italic;
+  font-size: 0.6em;
+  margin-top: 0;
+}
+
 .wordGuess {
   font-size: 2em;
   width: 80%;
