--- a/src/index.scss
+++ b/src/index.scss
@@ -28,57 +28,66 @@ a:visited {
 }
 
 header {
-  margin: 0.5em auto;
+  background: black;
+  color: white;
+  width: 100%;
+  margin: 0 auto 16px;
   h1 {
+    padding: 5px;
+    margin: 4px 0;
     font-style: italic;
     text-decoration: underline;
-    color: black;
+    color: white;
     text-align: center;
   }
 }
 
 .addPoem {
   width: 100%;
-  padding: 0 2em;
+  padding: 0 8px;
   .poemInput {
     height: 400px;
     width: 100%;
   }
 }
 
-.learnPoem {
+.poemList {
   flex: 1;
-  /* display: flex; */
-  /* flex-direction: column; */
-  .guesses {
+}
+
+.guesses {
+  width: 100%;
+  padding: 0 32px;
+  margin: 0 auto 8px;
+  .wordGuess {
+    font-size: 24px;
+    margin: 0 auto;
     width: 100%;
-    padding: 0 2em;
-    margin: 0 auto 0.5em;
-    .wordGuess {
-      font-size: 2em;
-      margin: 0 auto;
-      width: 100%;
-    }
   }
-  .poem {
-    width: 100%;
-    padding: 0 2em;
-    font-size: 0.8em;
-    overflow-y: scroll;
-    height: 450px;
-    .poemTitle {
-      h2 {
-        font-size: 1em;
-        margin-bottom: 0.2em;
-        margin-top: 0em;
-      }
-      span {
-        font-style: italic;
-      }
+}
+.poem {
+  flex: 1;
+  width: 100%;
+  padding: 0 32px;
+  font-size: 12px;
+  overflow-y: scroll;
+  /* height: 450px; */
+  .poemTitle {
+    h2 {
+      font-size: 16px;
+      margin-bottom: 4px;
+      margin-top: 0em;
+    }
+    span {
+      font-style: italic;
     }
   }
 }
 
+footer {
+  height: 12px;
+  background-color: black;
+}
 
 .maskedPoem.completed {
   color: green;
